--- a/.ideavimrc
+++ b/.ideavimrc
@@ -3,6 +3,10 @@ set incsearch
 Plug 'machakann/vim-highlightedyank'
 Plug 'tpope/vim-commentary'
 set surround
+set visualbell
+set noerrorbells
+set rnu
+set nu
 
 set clipboard+=unnamed
 
