--- a/.ideavimrc
+++ b/.ideavimrc
@@ -19,11 +19,14 @@ set quickscope
 map <leader>ff <Action>(SearchEverywhere)
 map <leader>fd <Action>(GotoDeclaration)
 map <leader>ft <Action>(GotoTypeDeclaration)
+nnoremap gn :action GotoNextError<CR>
+nnoremap gp :action GotoPreviousError<CR>
 
 map <leader>rc <Action>(IdeaVim.ReloadVimRc.reload)
 map <leader>z <Action>(ToggleDistractionFreeMode)
 map <leader>er <Action>(Run) 
-map <leader>a <Action>(ShowIntentionActions)
+map <leader>ca <Action>(ShowIntentionActions)
+map <leader>oe <Action>(ShowErrorDescription)
 map <leader>rn <Action>(RenameElement)
 map <leader>fm <Action>(ReformatCode)
 
