--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -208,4 +208,12 @@ bindsym $mod+r mode "resize"
     # Special key to take a screenshot with grim
     bindsym Print exec grim
 
+#
+# Status Bar:
+#
+# Read `man 5 sway-bar` for more information about this section.
+bar {
+    swaybar_command waybar
+}
+
 include /etc/sway/config.d/*
