--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -7,13 +7,59 @@ padding.y = 10
 
 decorations = "Buttonless"
 
+# Linux / Windows: Ctrl + Shift + . and Ctrl + Shift + ,
+[[keyboard.bindings]]
+key = "Period"
+mods = "Control|Shift"
+action = "IncreaseFontSize"
 
-#opacity = 0.30
-#opacity = 0.4
-opacity = 0.7
-blur = true
+[[keyboard.bindings]]
+key = "Comma"
+mods = "Control|Shift"
+action = "DecreaseFontSize"
 
-#option_as_alt = "Both"
+# macOS: Command + Shift + . and Command + Shift + ,
+[[keyboard.bindings]]
+key = "Period"
+mods = "Command|Shift"
+action = "IncreaseFontSize"
+
+[[keyboard.bindings]]
+key = "Comma"
+mods = "Command|Shift"
+action = "DecreaseFontSize"
+
+# Fallbacks for shifted-key quirk (some versions/layouts expect the shifted symbol as 'key')
+[[keyboard.bindings]]
+key = ">"
+mods = "Control|Shift"
+action = "IncreaseFontSize"
+
+[[keyboard.bindings]]
+key = "<"
+mods = "Control|Shift"
+action = "DecreaseFontSize"
+
+# Also keep the classic = / - shortcuts (often work reliably)
+[[keyboard.bindings]]
+key = "="
+mods = "Control"
+action = "IncreaseFontSize"
+
+[[keyboard.bindings]]
+key = "-"
+mods = "Control"
+action = "DecreaseFontSize"
+
+[[keyboard.bindings]]
+key = "="
+mods = "Command"
+action = "IncreaseFontSize"
+
+[[keyboard.bindings]]
+key = "-"
+mods = "Command"
+action = "DecreaseFontSize"
 
 [font]
 normal.family = "Comic Code"
