use rofi instead of dmenu_run
apparently dmenu_run does not list applicatinos defined by .desktop
files

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -17,7 +17,7 @@ exec --no-startup-id nm-applet
 # Key bindings
 bindsym $mod+Return exec $term
 bindsym $mod+q kill
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id rofi -show drun
 
 # Floating modifier
 floating_modifier $mod
