added GotoSymbol action

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -20,6 +20,7 @@ map <leader>fa <Action>(GotoAction)
 map <leader>fc <Action>(GotoClass)
 map <leader>fe <Action>(SearchEverywhere)
 map <leader>ff <Action>(GotoFile)
+map <leader>fs <Action>(GotoSymbol)
 map <leader>fg <Action>(FindInPath)
 map <leader>fd <Action>(GotoDeclaration)
 map <leader>fr <Action>(FindUsages)
