don't warn me about overrides
The feature is just too useful to define clean APIs.

--- a/clangd/.config/clangd/config.yaml
+++ b/clangd/.config/clangd/config.yaml
@@ -1,2 +1,4 @@
 CompileFlags:
-  Add: [-xc] # Treat all files as C by default
+  Add:
+  - "-xc" # Treat all files as C by default
+  - "-Wno-initializer-overrides"
