lazygit floating window

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,8 +19,10 @@ bind l select-pane -R
 bind | split-window -h
 bind - split-window -v
 
-# Set default terminal to 256 colors
-set -g default-terminal "screen-256color"
+bind g popup -E -w 80% -h 90% -d "#{pane_current_path}" lazygit
+
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ",xterm-256color:Tc"
 
 black="#000000"
 gray_light="#D8DEE9"
