default to make new windows in the same working directory

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,23 +3,22 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# Reload config with Prefix + r
+unbind c
+bind c new-window -c "#{pane_current_path}"
+
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# Enable mouse support for pane selection and scrolling
 set -g mouse on
 
-# Use Vim-like keys for pane navigation
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Split windows with Prefix + | (vertical) and Prefix + - (horizontal)
 bind | split-window -h
 bind - split-window -v
 
-bind g popup -E -w 80% -h 90% -d "#{pane_current_path}" lazygit
+bind g popup -E -w 80% -h 90% -d "#{pane_current_path}" -B lazygit
 
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
