--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,6 +34,7 @@ set -g status-position top
 set -g status-left-length 100
 set -g status-style "fg=${gray_light},bg=default"
 set -g status-left "#[fg=${green_soft},bold] #S #[fg=${gray_light},nobold]| "
+set -g status-right "#[fg=${gray_dark}]%H:%M"
 set -g window-status-current-format "#[fg=${cyan_soft}]#[fg=${black},bg=${cyan_soft},bold]#I:#W#[fg=${cyan_soft},bg=default]"
 set -g window-status-format " #I:#W "
 set -g message-style "fg=${gray_light},bg=default"
