start at index 1

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,6 +22,8 @@ bind g popup -E -w 100% -h 100% -d "#{pane_current_path}" -B lazygit
 
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
+set -g base-index 1
+setw -g pane-base-index 1
 
 black="#000000"
 gray_light="#D8DEE9"
