--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,6 +24,7 @@ set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
 set -g base-index 1
 setw -g pane-base-index 1
+set -g renumber-windows on
 
 black="#000000"
 gray_light="#D8DEE9"
@@ -37,7 +38,7 @@ set -g status-left-length 100
 set -g status-style "fg=${gray_light},bg=default"
 set -g status-left "#[fg=${green_soft},bold] #S #[fg=${gray_light},nobold]| "
 set -g status-right "#[fg=${gray_dark}]%H:%M"
-set -g window-status-current-format "#[fg=${cyan_soft}]#[fg=${black},bg=${cyan_soft},bold] #I:#W #[fg=${cyan_soft},bg=default]"
+set -g window-status-current-format "#[fg=${cyan_soft}]#[fg=${black},bg=${cyan_soft}] #I:#W #[fg=${cyan_soft},bg=default]"
 set -g window-status-format "  #I:#W  "
 set -g message-style "fg=${gray_light},bg=default"
 set -g mode-style "fg=${gray_dark},bg=${blue_muted}"
