--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,19 +6,18 @@ bind-key C-a send-prefix
 unbind c
 bind c new-window -c "#{pane_current_path}"
 
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind c-r source-file ~/.tmux.conf \; display "Reloaded!"
 
 set -g mouse on
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind c-h select-pane -L
+bind c-j select-pane -D
+bind c-k select-pane -U
+bind c-l select-pane -R
 
-bind | split-window -h
-bind - split-window -v
-
-bind g popup -E -w 100% -h 100% -d "#{pane_current_path}" -B lazygit
+bind c-g popup -E -w 100% -h 100% -d "#{pane_current_path}" -b rounded lazygit
+bind c-k popup -E -w 100% -h 100% -b rounded "tmux list-keys | fzf"
+bind c-t popup -E -w 100% -h 100% -b rounded -d "#{pane_current_path}" 
 
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
