shell script based session management

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,6 +18,7 @@ bind c-l select-pane -R
 bind c-g popup -E -w 100% -h 100% -d "#{pane_current_path}" -b rounded lazygit
 bind c-k popup -E -w 100% -h 100% -b rounded "tmux list-keys | fzf"
 bind c-t popup -E -w 100% -h 100% -b rounded -d "#{pane_current_path}" 
+bind c-s popup -E -w 100% -h 100% -b rounded "sh $HOME/choose-session.sh"
 
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
