--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -1,2 +1,10 @@
 backend = "glx";
 vsync = true;
+
+rounded-corners-exclude = [
+];
+
+inactive-opacity = 0.7;
+opacity-rule = [
+  "100:class_g = 'Rofi'",
+];
