Revert "remove gaps and rounded corners. also make the difference between focused and unfocused bigger"
This reverts commit ca7f8d0b2173c8c11f077ae6ddbec276ab83f810.

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -10,6 +10,8 @@ set $term alacritty
 
 # Window borders
 new_window pixel 0
+gaps inner 10
+gaps outer 5
 
 exec --no-startup-id xset s off -dpms
 exec --no-startup-id picom --config ~/.config/picom.conf
