--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -1,10 +1,11 @@
 backend = "glx";
 vsync = true;
 
+corner-radius = 20.0;
 rounded-corners-exclude = [
 ];
 
-inactive-opacity = 0.7;
+inactive-opacity = 0.8;
 opacity-rule = [
   "100:class_g = 'Rofi'",
 ];
