--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -29,6 +29,9 @@ bindsym $mod+Shift+r reload
 # Exit i3
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Exit i3? This will end your session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
+focus_follows_mouse no
+focus_on_window_activation none
+
 # Move focus
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
