change thEtmux config to be less noisy
the pill highlight was cool in theory but the terminal emulator does not
render it properly, so fuck it.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,6 +26,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
 
+white="#ffffff"
 black="#000000"
 gray_light="#D8DEE9"
 gray_medium="#ABB2BF"
@@ -36,11 +37,11 @@ cyan_soft="#88C0D0"
 set -g status-position top
 set -g status-left-length 100
 set -g status-style "fg=${gray_light},bg=default"
-set -g status-left "#[fg=${green_soft},bold] #S #[fg=${gray_light},nobold]| "
+set -g status-left "#[fg=${green_soft},bold]  #S #[fg=${gray_light},nobold] | "
 set -g status-right "#[fg=${gray_dark}]%H:%M"
-set -g window-status-current-format "#[fg=${cyan_soft}]#[fg=${black},bg=${cyan_soft}] #I:#W #[fg=${cyan_soft},bg=default]"
-set -g window-status-format "  #I:#W  "
-set -g message-style "fg=${gray_light},bg=default"
+set -g window-status-current-format " #[fg=${white},bold]#I.#W "
+set -g window-status-format " #I.#W "
+set -g message-style "fg=${gray_medium},bg=default"
 set -g mode-style "fg=${gray_dark},bg=${blue_muted}"
 set -g pane-border-style "fg=${gray_dark}"
 set -g pane-active-border-style "fg=${gray_medium}"
