--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,8 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+set-option -g focus-events on
+
 unbind c
 bind c new-window -c "#{pane_current_path}"
 
