keybinding to join windows into panes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,8 +18,11 @@ bind c-k select-pane -U
 bind c-l select-pane -R
 
 bind c-g popup -E -w 80% -h 80% -d "#{pane_current_path}" -b rounded lazygit
-bind c-t popup -E -w 80% -h 80% -b rounded -d "#{pane_current_path}" 
+bind c-t popup -E -w 80% -h 80% -b rounded -d "#{pane_current_path}"
 bind c-s popup -E -w 80% -h 80% -b rounded "sh $HOME/choose-session.sh"
+
+bind j command-prompt -p "Join window:" "join-pane -h -s %1"
+bind b break-pane
 
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
