keybinding to remove all breakpoints

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -35,6 +35,7 @@ map <leader>i <Action>(Inline)
 map <leader>rc <Action>(IdeaVim.ReloadVimRc.reload)
 map <leader>z <Action>(ToggleDistractionFreeMode)
 map <leader>b <Action>(ToggleLineBreakpoint)
+map <leader>B <Action>(Debugger.RemoveAllBreakpoints)
 map <leader>er <Action>(Run) 
 map <leader>ca <Action>(ShowIntentionActions)
 map <leader>oe <Action>(ShowErrorDescription)
