--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -14,6 +14,7 @@ new_window pixel
 exec --no-startup-id xset s off -dpms
 exec --no-startup-id picom --backend glx --vsync
 exec --no-startup-id nm-applet
+exec --no-startup-id blueman-applet
 
 # Key bindings
 bindsym $mod+Return exec $term
