--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = alacritty
 $fileManager = dolphin
 $menu = wofi --show drun
 
