--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -230,7 +230,6 @@ bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdow
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, G, togglefloating,
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, COMMA, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
 
@@ -247,6 +246,12 @@ bind = $mainMod SHIFT, K, movewindow, u
 bind = $mainMod SHIFT, J, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
+
+bind = $mainMod, U, workspace, name:u
+bind = $mainMod, I, workspace, name:i
+bind = $mainMod, O, workspace, name:o
+bind = $mainMod, P, workspace, name:p
+
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -269,6 +274,11 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+bind = $mainMod SHIFT, U, movetoworkspace, name:u
+bind = $mainMod SHIFT, I, movetoworkspace, name:i
+bind = $mainMod SHIFT, O, movetoworkspace, name:o
+bind = $mainMod SHIFT, P, movetoworkspace, name:p
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
