--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,7 +19,7 @@ bind c-l select-pane -R
 
 bind c-g popup -E -w 80% -h 80% -d "#{pane_current_path}" -b rounded lazygit
 bind c-t popup -E -w 80% -h 80% -b rounded -d "#{pane_current_path}"
-bind c-s popup -E -w 80% -h 80% -b rounded "sh $HOME/choose-session.sh"
+bind c-s popup -E -w 80% -h 80% -b rounded "sesh"
 
 bind j command-prompt -p "Join window:" "join-pane -h -s %1"
 bind b break-pane
