now uses sesh instead

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,7 @@
 # Rebind prefix key to Ctrl+a for easier access
 unbind C-b
 set-option -g prefix C-a
+set-option -g remain-on-exit off
 bind-key C-a send-prefix
 
 set-option -g focus-events on
@@ -20,6 +21,7 @@ bind c-l select-pane -R
 bind c-g popup -E -w 80% -h 80% -d "#{pane_current_path}" -b rounded lazygit
 bind c-t popup -E -w 80% -h 80% -b rounded -d "#{pane_current_path}"
 bind c-s popup -E -w 80% -h 80% -b rounded "sesh"
+bind c-x confirm-before -p "Kill current session #S? (y/n)" kill-session
 
 bind j command-prompt -p "Join window:" "join-pane -h -s %1"
 bind b break-pane
