--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -15,6 +15,7 @@ exec --no-startup-id xset s off -dpms
 exec --no-startup-id picom --backend glx --vsync
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
+exec --no-startup-id feh --bg-max ~/.wallpaper/
 
 # Key bindings
 bindsym $mod+Return exec $term
@@ -94,7 +95,7 @@ bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 bindsym $mod+f fullscreen
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+g floating toggle
 bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
